# not-your-therapist

backend/: .env.example  .gitignore  main.py  pyproject.toml
backend/app/: __init__.py  dependencies.py  routes.py  schemas.py  sse_helper.py
backend/app/agent_services/: __init__.py  agent.py  base.py  skills_backend.py
backend/app/agent_services/skills/active_listening/: skill.md
backend/app/agent_services/skills/collaborative_goal_setting/: skill.md
backend/app/agent_services/skills/guided_selfhelp/: skill.md
backend/app/agent_services/skills/psychoeducation/: skill.md
backend/app/repository/: __init__.py  conversation.py  database.py
backend/data/: agent_checkpoints.db-shm  agent_checkpoints.db-wal
backend/tests/: __init__.py  conftest.py  test_repository.py  test_routes.py  test_schemas.py
not-your-therapist/: index.html  package-lock.json  package.json
not-your-therapist/src/: App.css  index.css
not-your-therapist/src/components/: ChatInput.jsx  ChatInterface.jsx  ChatMessage.jsx
not-your-therapist/src/services/: api.js
not-your-therapist/src/styles/: ChatInput.css  ChatInterface.css  ChatMessage.css
